[package]
name = "starlit_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
nightfall_core = { path = "../nightfall_core" }
starlit_alloc = { path = "../starlit_alloc" }
affogato = { path = "../affogato" }
thiserror = "1.0.58"
